--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,39 @@
+/* 
+**************
+Reset Default
+**************
+*/
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+/* 
+**************
+Design System
+**************
+*/
+
+body {
+    font-family: Poppins, sans-serif;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+header {
+    text-align: center;
+    padding: 40px;
+}
+
+/* Header */
+
+header h1 {
+    font-family: fredoka, sans-serif;
+    color: #E43170;
+    margin-bottom: 40px;
 }
